Fix center vertical alignement in dashboard header

--- a/frontend/src/css/sass/components/_gameshop-widget.scss
+++ b/frontend/src/css/sass/components/_gameshop-widget.scss
@@ -7,6 +7,12 @@
         a {
             margin-left: 1.25rem;
         }
+
+        h2 {
+            margin: 0;
+        }
+
+        margin-bottom: 1rem;
     }
 
     #gameshop-widget-gameslist {
